--- a/src/templates/stores/new_store.html
+++ b/src/templates/stores/new_store.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% block content %}
     <div class="pb-2 mt-4 mb-2 border-bottom">
         <h1>Create Store</h1>
