--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,7 @@
     {% include 'html_dependencies.html' %}
     {% include "users/register.html" %}
     {% include "users/login.html" %}
+    {% include "alerts/edit_alert.html" %}
 </head>
 <body>
 
