Fix logo in alert page

--- a/src/templates/alerts/alert.html
+++ b/src/templates/alerts/alert.html
@@ -1,5 +1,6 @@
 {% extends "index.html" %}
 {% block content %}
+{% include "alerts/edit_alert.html" %}
     <div class="pb-2 mt-4 mb-2 border-bottom">
         <h2>Alert <small>for {{alert.item.name}}</small></h2>
     </div>
