Update store index and alerts look

--- a/src/templates/users/alerts.html
+++ b/src/templates/users/alerts.html
@@ -6,17 +6,15 @@
 
     <div class="card-columns">
         {% for alert in alerts %}
-            <div class="card {{'bg-light border-warning mb-3' if not alert.active else 'bg-basic border-primary mb-3'}}" style="width: 12rem; height: 20rem;">
-                <div class="card-header bg-transparent {{'border-warning' if not alert.active else 'border-primary'}}">
+            <div class="card {{'bg-light border-warning mb-3' if not alert.active else 'bg-basic mb-3'}}" >
+                <div class="card-header bg-transparent {{'border-warning' if not alert.active }}">
                     <a href="{{url_for('alerts.get_alert_page', alert_id = alert._id)}}">
-                        <img class="card-img-top" width="60" height="180" src="{{alert.item.img_src}}">
+                        <img class="mx-auto d-block" width="150" height="200" src="{{alert.item.img_src}}">
                     </a>
                 </div>
                 <div class="card-body">
-                    <div>
-                        <small class="text-muted">@ {{alert.last_checked.strftime("%Y-%m-%d at %H:%M")}}</small>
-                        <p class="mb-1">Price Found <strong>${{alert.item.price}}</strong></p>
-                    </div>
+                    <small class="text-muted">@ {{alert.last_checked.strftime("%Y-%m-%d at %H:%M")}}</small>
+                    <p class="mb-1">Price Found <strong>${{alert.item.price}}</strong></p>
                 </div>
             </div>
         {% endfor %}
